--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 			<section id="header">
 				<div class="inner">
 					<span class="icon major fa-user"></span>
-					<h1><strong>Tranformer votre vie </br> avec des thérapies courtes.</strong></h1>
+					<h1><strong>Tranformer votre vie </br> avec des thérapies courtes</strong></h1>
 					<h4>Bernadette Romeo, practicienne en hypnôse éricksonienne et sophrologue</h4>
 					<ul class="actions special">
-						<li><a href="#formations" class="button scrolly">Discover</a></li>
+						<li><a href="#formations" class="button scrolly">En savoir plus</a></li>
 					</ul>
 				</div>
 			</section>
