--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 			<section id="header">
 				<div class="inner">
 					<span class="icon major fa-user"></span>
-					<h1><strong>Tranformer votre vie </br> avec des thérapies courtes</strong></h1>
-					<h4>Bernadette Romeo, practicienne en hypnôse éricksonienne et sophrologue</h4>
+					<h1><strong>Tranformez votre vie </br> avec des thérapies courtes</strong></h1>
+					<h4>Bernadette Roméo, </br> praticienne en hypnose Ericksonienne et sophrologue</h4>
 					<ul class="actions special">
 						<li><a href="#formations" class="button scrolly">En savoir plus</a></li>
 					</ul>
@@ -39,16 +39,16 @@
 							<ul class="formations">
 								<li style="list-style: none">Ecole Française de Sophrologie -IFS- Paris 10eme
 								</li>
-								<li>Diplôme certifié RNCP (registre national des certifications professionnelles)
+								<li>Diplome certifié RNCP (registre national des certifications professionnelles)
 								</li>
 							</ul>
 						</div>
 						<div class="col-6">
-							<h3>Hypnôse</h3>
+							<h3>Hypnose</h3>
 							<ul class="formations">
-								<li>Ecole Européenne supérieure d'hypnôse -HYPNOSUP- Paris 13eme
+								<li>Ecole Européenne supérieure d'hypnose -HYPNOSUP- Paris 13eme
 								</li>
-								<li>Practicienne certifiée en hypnôse éricksonienne
+								<li>Practicienne certifiée en hypnose éricksonienne
 								</li>
 							</ul>
 						</div>
@@ -57,9 +57,9 @@
 			</section>
 
 			<div id="promo-wrapper">
-			<section id="promo">
-				<h2>Tarifs par séance: 70 € au cabinet, 85 € à domicile</h2>
-				<a href="#contact" class="button">Me contacter</a>
+			<section id="">
+				<!-- <h2>Tarifs par séance: 70 € la séance, 85 € à domicile</h2>
+				<a href="#contact" class="button">Me contacter</a> -->
 			</section>
 			</div>
 
@@ -68,12 +68,12 @@
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>Qu'est-ce que l'<strong>hypnôse</strong></h2>
+								<h2>Qu'est-ce que l'<strong>hypnose</strong></h2>
 							</header>
-							<h6>L'hypnôse est une thérapie brève basée sur la suggestion.</br></br>
-								Elle permet, en mettant de côté le mental, d'avoir accès â ses ressources inconsientes les plus profondes afin d'obtenir les changements désirés.</br></br>
-								La personne en état d'hypnôse reste parfaitement maître d'elle-même. Il ne sera pas possible de lui faire faire quelque chose contre son gré.</br></br>
-								L'hypnôse a démontré son efficacité dans de nombreux domaines, tels que:
+							<h6>L'hypnose est une thérapie brève basée sur la suggestion.</br></br>
+								Elle permet, en mettant de coté le mental, d'avoir accès â ses ressources inconsientes les plus profondes afin d'obtenir les changements désirés.</br></br>
+								La personne en état d'hypnose reste parfaitement maître d'elle-même. Il ne sera pas possible de lui faire faire quelque chose contre son gré.</br></br>
+								L'hypnose a démontré son efficacité dans de nombreux domaines, tels que:
 							</h6>
 							<div class="container">
 							<div class="row gtr-150">
@@ -113,9 +113,9 @@
 							<header class="major">
 								<h2>Qu'est-ce que la <strong>sophrologie</strong></h2>
 							</header>
-							<h6>C'est une mééthode à base d'exercises simples de respiration, de détente musculaire, et de visualisations positives.</br></br>
+							<h6>C'est une méthode à base d'exercises simples de respiration, de détente musculaire, et de visualisations positives.</br></br>
 								Cette methode va vous permettre de prendre du recul, et de lâcher prise.</br></br>
-								C'est un outil très efficace contre le stress et ses symptômes (irritabilité, sommeil, manque de concentration, angoisses, prévention du burn out).</br></br>
+								C'est un outil très efficace contre le stress et ses symptomes (irritabilité, sommeil, manque de concentration, angoisses, prévention du burn out).</br></br>
 								La sophrologie est aussi très efficace pour aliresser des situations anxiogènes, telles que des examens scolaires ou des compétitions sportives, une internvention chirurgicale, un accouchement, un changement de vie (professionelle ou privée).
 							</h6>
 						</div>
@@ -146,7 +146,7 @@
 						<h2>Contact</h2>
 						<ul class="alt">
 							<li>Adresse: 55 route de Bishwiller &bull; 67300 Schiltigheim &bull; France</li>
-							<li>Phone: 06 80 84 04 82</li>
+							<li>Téléphone: 06 80 84 04 82</li>
 							<li>Email: <a href="mailto:b.romeo@hypnosophro.net">b.romeo@hypnosophro.net</a></li>
 						</ul>
 				</div>
