--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<section id="header">
 				<div class="inner">
 					<span class="icon major fa-user"></span>
-					<h1><strong>Tranformez votre vie </br> avec des thérapies courtes</strong></h1>
+					<h1><strong>Tranformez votre vie </br> avec des thérapies brèves</strong></h1>
 					<h4>Bernadette Roméo, </br> praticienne en hypnose Ericksonienne et sophrologue</h4>
 					<ul class="actions special">
 						<li><a href="#formations" class="button scrolly">En savoir plus</a></li>
@@ -35,20 +35,20 @@
 				<div class="container">
 					<div class="row gtr-150">
 						<div class="col-6">
-							<h3>Sophrologie</h3>
-							<ul class="formations">
-								<li style="list-style: none">Ecole Française de Sophrologie -IFS- Paris 10eme
-								</li>
-								<li>Diplome certifié RNCP (registre national des certifications professionnelles)
-								</li>
-							</ul>
-						</div>
-						<div class="col-6">
 							<h3>Hypnose</h3>
 							<ul class="formations">
 								<li>Ecole Européenne supérieure d'hypnose -HYPNOSUP- Paris 13eme
 								</li>
 								<li>Practicienne certifiée en hypnose éricksonienne
+								</li>
+							</ul>
+						</div>
+						<div class="col-6">
+							<h3>Sophrologie</h3>
+							<ul class="formations">
+								<li style="list-style: none">Ecole Française de Sophrologie -IFS- Paris 10eme
+								</li>
+								<li>Diplome certifié RNCP (registre national des certifications professionnelles)
 								</li>
 							</ul>
 						</div>
@@ -58,8 +58,14 @@
 
 			<div id="promo-wrapper">
 			<section id="">
-				<!-- <h2>Tarifs par séance: 70 € la séance, 85 € à domicile</h2>
-				<a href="#contact" class="button">Me contacter</a> -->
+				<div class="container">
+				<h5 style="color:white">La durée moyenne d'une séance est d'environ une heure.</h5>
+				<h5 style="color:white">La première est toujours consacrée à un échange approfondi afin de déterminer votre objectif.</h5>
+				<h5 style="color:white">De cet entretien découlera le contenu des séances suivantes.</h5>
+				<h5 style="color:white">La sophrologie et l'hypnose ne se substituent aucunement ni à une consultation médicale , ni à un traitement donné par votre médecin.</h5>
+		</div>
+				<!-- <h2>Tarifs par séance: 70 € la séance, 85 € à domicile</h2> -->
+				<!-- <a href="#contact" class="button">Me contacter</a> -->
 			</section>
 			</div>
 
@@ -80,7 +86,7 @@
 								<div class="col-6 col-12-medium">
 									<ul class="examples">
 										<li>Les phobies</li>
-										<li>Les aliictions (e.g. cigarette)</li>
+										<li>Les addictions (e.g. cigarette)</li>
 										<li>La confiance et l'estime de soi</li>
 										<li>Les problèmes de sommeil/poids</li>
 									</ul>
@@ -91,6 +97,7 @@
 										<li>Le stress</li>
 										<li>Les acouphènes</li>
 										<li>Les douleurs multiples</li>
+										<li>Les problèmes de poids</li>
 									</ul>
 								</div>
 							</div>
@@ -113,15 +120,31 @@
 							<header class="major">
 								<h2>Qu'est-ce que la <strong>sophrologie</strong></h2>
 							</header>
-							<h6>C'est une méthode à base d'exercises simples de respiration, de détente musculaire, et de visualisations positives.</br></br>
-								Cette methode va vous permettre de prendre du recul, et de lâcher prise.</br></br>
-								C'est un outil très efficace contre le stress et ses symptomes (irritabilité, sommeil, manque de concentration, angoisses, prévention du burn out).</br></br>
-								La sophrologie est aussi très efficace pour aliresser des situations anxiogènes, telles que des examens scolaires ou des compétitions sportives, une internvention chirurgicale, un accouchement, un changement de vie (professionelle ou privée).
+							<h6>C'est une méthode à base d'exercises simples de respiration, de détente musculaire, et de visualisations positives.
+								Cette methode va vous permettre de prendre du recul, et de lâcher prise.</h6>
+							<h6>C'est un outil très efficace contre <strong> le stress</strong> et ses symptomes (irritabilité, sommeil, manque de concentration, angoisses, prévention du burn out).</h6>
+							<h6>La sophrologie est aussi très efficace pour addresser des <strong>situations anxiogènes</strong>, telles que des examens scolaires ou des compétitions sportives, une intervention chirurgicale, un accouchement, un changement de vie (professionelle ou privée).
 							</h6>
 						</div>
 					</div>
 				</div>
 			</section>
+
+			<div id="promo-wrapper">
+			<section id="">
+				<!-- <div class="container">
+				<h5 style="color:white">La durée moyenne d'une séance est d'environ une heure.</h5>
+				<h5 style="color:white">La première est toujours consacrée à un échange approfondi afin de déterminer votre objectif.</h5>
+				<h5 style="color:white">De cet entretien découlera le contenu des séances suivantes.</h5>
+				<h5 style="color:white">La sophrologie et l'hypnose ne se substituent aucunement ni à une consultation médicale , ni à un traitement donné par votre médecin.</h5>
+		</div> -->
+		<header class="major">
+			<h2 style="color:white">Tarifs par séance</h2>
+		</header>
+				<h2 style="color:white">70 € au cabinet, 85 € à domicile</h2>
+				<!-- <a href="#contact" class="button">Me contacter</a> -->
+			</section>
+			</div>
 
 		<!-- contact -->
 			<section id="contact" class="main style2 special">
