--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 										<li>Les phobies</li>
 										<li>Les addictions (e.g. cigarette)</li>
 										<li>La confiance et l'estime de soi</li>
-										<li>Les problèmes de sommeil/poids</li>
+										<li>Les problèmes de sommeil</li>
 									</ul>
 								</div>
 								<div class="col-6 col-12-medium">
@@ -122,7 +122,7 @@
 							</header>
 							<h6>C'est une méthode à base d'exercises simples de respiration, de détente musculaire, et de visualisations positives.
 								Cette methode va vous permettre de prendre du recul, et de lâcher prise.</h6>
-							<h6>C'est un outil très efficace contre <strong> le stress</strong> et ses symptomes (irritabilité, sommeil, manque de concentration, angoisses, prévention du burn out).</h6>
+							<h6>C'est un outil très efficace contre <strong> le stress</strong> et ses symptômes (irritabilité, sommeil, manque de concentration, angoisses, prévention du burn out).</h6>
 							<h6>La sophrologie est aussi très efficace pour addresser des <strong>situations anxiogènes</strong>, telles que des examens scolaires ou des compétitions sportives, une intervention chirurgicale, un accouchement, un changement de vie (professionelle ou privée).
 							</h6>
 						</div>
