--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="inner">
 					<span class="icon major fa-user"></span>
 					<h1><strong>Tranformez votre vie </br> avec des thérapies brèves</strong></h1>
-					<h4>Bernadette Roméo, </br> praticienne en hypnose Ericksonienne et sophrologue</h4>
+					<h4>Bernadette Roméo, </br> Praticienne en hypnose Ericksonienne et sophrologue</h4>
 					<ul class="actions special">
 						<li><a href="#formations" class="button scrolly">En savoir plus</a></li>
 					</ul>
@@ -48,7 +48,7 @@
 							<ul class="formations">
 								<li style="list-style: none">Ecole Française de Sophrologie -IFS- Paris 10eme
 								</li>
-								<li>Diplome certifié RNCP (registre national des certifications professionnelles)
+								<li>Diplôme certifié RNCP (registre national des certifications professionnelles)
 								</li>
 							</ul>
 						</div>
@@ -58,14 +58,6 @@
 
 			<div id="promo-wrapper">
 			<section id="">
-				<div class="container">
-				<h5 style="color:white">La durée moyenne d'une séance est d'environ une heure.</h5>
-				<h5 style="color:white">La première est toujours consacrée à un échange approfondi afin de déterminer votre objectif.</h5>
-				<h5 style="color:white">De cet entretien découlera le contenu des séances suivantes.</h5>
-				<h5 style="color:white">La sophrologie et l'hypnose ne se substituent aucunement ni à une consultation médicale , ni à un traitement donné par votre médecin.</h5>
-		</div>
-				<!-- <h2>Tarifs par séance: 70 € la séance, 85 € à domicile</h2> -->
-				<!-- <a href="#contact" class="button">Me contacter</a> -->
 			</section>
 			</div>
 
@@ -76,19 +68,20 @@
 							<header class="major">
 								<h2>Qu'est-ce que l'<strong>hypnose</strong></h2>
 							</header>
-							<h6>L'hypnose est une thérapie brève basée sur la suggestion.</br></br>
+							<h6>L'hypnose est un état de conscience particulier entre vieille et sommeil.</br></br>
 								Elle permet, en mettant de coté le mental, d'avoir accès â ses ressources inconsientes les plus profondes afin d'obtenir les changements désirés.</br></br>
-								La personne en état d'hypnose reste parfaitement maître d'elle-même. Il ne sera pas possible de lui faire faire quelque chose contre son gré.</br></br>
-								L'hypnose a démontré son efficacité dans de nombreux domaines, tels que:
+								<!-- La personne en état d'hypnose reste parfaitement maître d'elle-même. Il ne sera pas possible de lui faire faire quelque chose contre son gré.</br></br> -->
+								Grâce aux suggestions faites, toujours en lien avec le vécu du consultant, l'hypnose dénoue des problèmes tels que:
 							</h6>
 							<div class="container">
 							<div class="row gtr-150">
 								<div class="col-6 col-12-medium">
 									<ul class="examples">
 										<li>Les phobies</li>
-										<li>Les addictions (e.g. cigarette)</li>
+										<li>Les addictions (ex: cigarette)</li>
 										<li>La confiance et l'estime de soi</li>
 										<li>Les problèmes de sommeil</li>
+										<li>Prise de parole en public</li>
 									</ul>
 								</div>
 								<div class="col-6 col-12-medium">
@@ -102,6 +95,8 @@
 								</div>
 							</div>
 							</div>
+							<h6>La personne en état d'hypnose reste parfaitement maître d'elle-même. Il ne sera pas possible de lui faire faire quelque chose contre son gré.</br></br>
+</h6>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/im2.png" alt="" /></span>
@@ -121,10 +116,28 @@
 								<h2>Qu'est-ce que la <strong>sophrologie</strong></h2>
 							</header>
 							<h6>C'est une méthode à base d'exercises simples de respiration, de détente musculaire, et de visualisations positives.
-								Cette methode va vous permettre de prendre du recul, et de lâcher prise.</h6>
+								Cette méthode va vous permettre de prendre du recul, et de lâcher prise.</h6>
 							<h6>C'est un outil très efficace contre <strong> le stress</strong> et ses symptômes (irritabilité, sommeil, manque de concentration, angoisses, prévention du burn out).</h6>
-							<h6>La sophrologie est aussi très efficace pour addresser des <strong>situations anxiogènes</strong>, telles que des examens scolaires ou des compétitions sportives, une intervention chirurgicale, un accouchement, un changement de vie (professionelle ou privée).
-							</h6>
+							<h6>La sophrologie est aussi très efficace pour gérer des <strong>situations anxiogènes</strong>, telles que se préparer à</h6>
+								<div class="container">
+								<div class="row gtr-150">
+									<div class="col-6 col-12-medium">
+										<ul class="examples">
+											<li>un examen</li>
+											<li>un concours</li>
+											<li>une competition sportive</li>
+											<li>un accouchement</li>
+										</ul>
+									</div>
+									<div class="col-6 col-12-medium">
+										<ul class="examples">
+											<li>une opération</li>
+											<li>un changement de vie professionelle ou privée</li>
+											<li>une prise de parole en public</li>
+										</ul>
+									</div>
+								</div>
+								</div>
 						</div>
 					</div>
 				</div>
@@ -132,16 +145,14 @@
 
 			<div id="promo-wrapper">
 			<section id="">
-				<!-- <div class="container">
+		<header class="major">
+			<h2 style="color:white">Les séances</h2>
+		</header>
+				<h2 style="color:white">Prix: 70 € par séance au cabinet, 85 € à domicile</h2>
 				<h5 style="color:white">La durée moyenne d'une séance est d'environ une heure.</h5>
 				<h5 style="color:white">La première est toujours consacrée à un échange approfondi afin de déterminer votre objectif.</h5>
 				<h5 style="color:white">De cet entretien découlera le contenu des séances suivantes.</h5>
 				<h5 style="color:white">La sophrologie et l'hypnose ne se substituent aucunement ni à une consultation médicale , ni à un traitement donné par votre médecin.</h5>
-		</div> -->
-		<header class="major">
-			<h2 style="color:white">Tarifs par séance</h2>
-		</header>
-				<h2 style="color:white">70 € au cabinet, 85 € à domicile</h2>
 				<!-- <a href="#contact" class="button">Me contacter</a> -->
 			</section>
 			</div>
