--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
 			<section id="header">
 				<div class="inner">
 					<span class="icon major fa-user"></span>
-					<h1><strong>Tranformez votre vie </br> avec des thérapies brèves</strong></h1>
-					<h4>Bernadette Roméo, </br> Praticienne en hypnose Ericksonienne et sophrologue</h4>
+					<h1><strong>Tranformez votre vie <br> avec des thérapies brèves</strong></h1><br>
+					<h4>Bernadette Roméo <br> Praticienne en hypnose Ericksonienne<br>
+							Sophrologue
+					</h4>
+
 					<ul class="actions special">
 						<li><a href="#formations" class="button scrolly">En savoir plus</a></li>
 					</ul>
@@ -68,7 +71,7 @@
 							<header class="major">
 								<h2>Qu'est-ce que l'<strong>hypnose</strong></h2>
 							</header>
-							<h6>L'hypnose est un état de conscience particulier entre vieille et sommeil.</br></br>
+							<h6>L'hypnose est un état de conscience particulier entre vieille et sommeil.<br>
 								Elle permet, en mettant de coté le mental, d'avoir accès â ses ressources inconsientes les plus profondes afin d'obtenir les changements désirés.</br></br>
 								<!-- La personne en état d'hypnose reste parfaitement maître d'elle-même. Il ne sera pas possible de lui faire faire quelque chose contre son gré.</br></br> -->
 								Grâce aux suggestions faites, toujours en lien avec le vécu du consultant, l'hypnose dénoue des problèmes tels que:
@@ -79,23 +82,24 @@
 									<ul class="examples">
 										<li>Les phobies</li>
 										<li>Les addictions (ex: cigarette)</li>
-										<li>La confiance et l'estime de soi</li>
+										<li>La confiance en soi</li>
+										<li>l'estime de soi</li>
 										<li>Les problèmes de sommeil</li>
 										<li>Prise de parole en public</li>
 									</ul>
 								</div>
 								<div class="col-6 col-12-medium">
 									<ul class="examples">
-										<li>Les anxiétés et angoisses</li>
+										<li>Les angoisses</li>
 										<li>Le stress</li>
 										<li>Les acouphènes</li>
-										<li>Les douleurs multiples</li>
+										<li>Les douleurs chroniques</li>
 										<li>Les problèmes de poids</li>
 									</ul>
 								</div>
 							</div>
 							</div>
-							<h6>La personne en état d'hypnose reste parfaitement maître d'elle-même. Il ne sera pas possible de lui faire faire quelque chose contre son gré.</br></br>
+							<h6>La personne en état d'hypnose reste parfaitement maître d'elle-même. Il ne sera pas possible de lui faire faire quelque chose contre son gré.<br>
 </h6>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
@@ -125,7 +129,7 @@
 										<ul class="examples">
 											<li>un examen</li>
 											<li>un concours</li>
-											<li>une competition sportive</li>
+											<li>une compétition sportive</li>
 											<li>un accouchement</li>
 										</ul>
 									</div>
