--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 								<h2>Qu'est-ce que l'<strong>hypnose</strong></h2>
 							</header>
 							<h6>L'hypnose est un état de conscience particulier entre vieille et sommeil.<br>
-								Elle permet, en mettant de coté le mental, d'avoir accès â ses ressources inconsientes les plus profondes afin d'obtenir les changements désirés.</br></br>
+								Elle permet, en mettant de coté le mental, d'avoir accès à ses ressources inconsientes les plus profondes afin d'obtenir les changements désirés.</br></br>
 								<!-- La personne en état d'hypnose reste parfaitement maître d'elle-même. Il ne sera pas possible de lui faire faire quelque chose contre son gré.</br></br> -->
 								Grâce aux suggestions faites, toujours en lien avec le vécu du consultant, l'hypnose dénoue des problèmes tels que:
 							</h6>
@@ -121,8 +121,8 @@
 							</header>
 							<h6>C'est une méthode à base d'exercises simples de respiration, de détente musculaire, et de visualisations positives.
 								Cette méthode va vous permettre de prendre du recul, et de lâcher prise.</h6>
-							<h6>C'est un outil très efficace contre <strong> le stress</strong> et ses symptômes (irritabilité, sommeil, manque de concentration, angoisses, prévention du burn out).</h6>
-							<h6>La sophrologie est aussi très efficace pour gérer des <strong>situations anxiogènes</strong>, telles que se préparer à</h6>
+							<h6>C'est un outil très efficace contre <strong> le stress</strong> et ses symptômes (irritabilité, manque de sommeil, manque de concentration, angoisses, prévention du burn out).</h6>
+							<h6>La sophrologie est aussi très efficace pour gérer des <strong>situations anxiogènes</strong>. Elle aide à se préparer à</h6>
 								<div class="container">
 								<div class="row gtr-150">
 									<div class="col-6 col-12-medium">
