--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+<title>Bernadette Roméo - hypnose et sophrologie</title>
 <meta name="description" content="Bernadette Roméo - hypnose et sophrologie">
 <meta name="keywords" content="Bernadette Romeo, Bernadette Roméo, Bernadette, Romeo, Roméo, sophrologie, hypnose, strasbourg" />
 
@@ -75,8 +76,8 @@
 							<header class="major">
 								<h2>Qu'est-ce que l'<strong>hypnose</strong></h2>
 							</header>
-							<h6>L'hypnose est un état de conscience particulier entre vieille et sommeil.<br>
-								Elle permet, en mettant de coté le mental, d'avoir accès à ses ressources inconsientes les plus profondes afin d'obtenir les changements désirés.</br></br>
+							<h6>L'hypnose est un état de conscience particulier entre veille et sommeil.<br>
+								Elle permet, en mettant de coté le mental, d'avoir accès à ses ressources inconscientes les plus profondes afin d'obtenir les changements désirés.</br></br>
 								<!-- La personne en état d'hypnose reste parfaitement maître d'elle-même. Il ne sera pas possible de lui faire faire quelque chose contre son gré.</br></br> -->
 								Grâce aux suggestions faites, toujours en lien avec le vécu du consultant, l'hypnose dénoue des problèmes tels que:
 							</h6>
