--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
 							<h6>L'hypnose est un état de conscience particulier entre veille et sommeil.<br>
 								Elle permet, en mettant de coté le mental, d'avoir accès à ses ressources inconscientes les plus profondes afin d'obtenir les changements désirés.</br></br>
 								<!-- La personne en état d'hypnose reste parfaitement maître d'elle-même. Il ne sera pas possible de lui faire faire quelque chose contre son gré.</br></br> -->
-								Grâce aux suggestions faites, toujours en lien avec le vécu du consultant, l'hypnose dénoue des problèmes tels que:
+								Grâce aux suggestions faites, toujours en lien avec le vécu du consultant, l'hypnose vous aide à dénouer des problèmes tels que :
 							</h6>
 							<div class="container">
 							<div class="row gtr-150">
 								<div class="col-6 col-12-medium">
 									<ul class="examples">
 										<li>Les phobies</li>
-										<li>Les addictions (ex: cigarette)</li>
+										<li>Vous aider à arrêter de fumer</li>
 										<li>La confiance en soi</li>
 										<li>l'estime de soi</li>
 										<li>Les problèmes de sommeil</li>
@@ -97,9 +97,8 @@
 									<ul class="examples">
 										<li>Les angoisses</li>
 										<li>Le stress</li>
-										<li>Les acouphènes</li>
-										<li>Les douleurs chroniques</li>
-										<li>Les problèmes de poids</li>
+										<li>Vous accompagne dans la gestion des acouphènes en complément d'un suivi médical</li>
+										<li>Les problèmes de poids, après contrôle médical</li>
 									</ul>
 								</div>
 							</div>
@@ -135,7 +134,6 @@
 											<li>un examen</li>
 											<li>un concours</li>
 											<li>une compétition sportive</li>
-											<li>un accouchement</li>
 										</ul>
 									</div>
 									<div class="col-6 col-12-medium">
