--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<span class="icon major fa-user"></span>
-					<h1><strong>Tranformez votre vie <br> avec des thérapies brèves</strong></h1><br>
+					<!-- <span class="icon major fa-user"></span> -->
+					<img src="images/bernadette.jpg" alt="Avatar" height="140" width="140" style="border-radius: 50%">
+					<h1><strong>Tranformez votre vie avec des thérapies brèves</strong></h1><br>
 					<h4>Bernadette Roméo <br> Praticienne en hypnose Ericksonienne<br>
 							Sophrologue
 					</h4>
