--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 		<header class="major">
 			<h2 style="color:white">Les séances</h2>
 		</header>
-				<h2 style="color:white">Prix: 70 € par séance au cabinet, 85 € à domicile</h2>
+				<h2 style="color:white">Séance au cabinet ou à domicile</h2>
 				<h5 style="color:white">La durée moyenne d'une séance est d'environ une heure.</h5>
 				<h5 style="color:white">La première est toujours consacrée à un échange approfondi afin de déterminer votre objectif.</h5>
 				<h5 style="color:white">De cet entretien découlera le contenu des séances suivantes.</h5>
